SVY-7584 fix missing border for portal

--- a/servoy_ngclient/war/servoydefault/portal/portal.css
+++ b/servoy_ngclient/war/servoydefault/portal/portal.css
@@ -1,5 +1,8 @@
 .svyPortalGridStyle {
-    width: 100%; 
-    height: 100%;
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    right: 0px;
+    bottom: 0px;
     overflow: hidden;
 }
